# videoplayer

./: .cvsignore  .gitignore  AUTHORS  COPYING  COPYING.dist  GLfuncs.h  GLloadexts.cpp  GLloadexts.h  GLutil.cpp  GLutil.h  GLvideo.cpp  GLvideo.h  GLvideo_glxrep.cpp  GLvideo_glxrep.h  GLvideo_mt.cpp  GLvideo_mt.h  GLvideo_osd.cpp  GLvideo_osd.h  GLvideo_params.h  GLvideo_pbotex.cpp  GLvideo_pbotex.h  GLvideo_perf.h  GLvideo_renderer.h  GLvideo_repeater.h  GLvideo_rt.cpp  GLvideo_rt.h  GLvideo_rtAdaptor.cpp  GLvideo_rtAdaptor.h  GLvideo_tradtex.cpp  GLvideo_tradtex.h  GLvideo_x11rep.cpp  GLvideo_x11rep.h  INSTALL  INSTALL.win32  Makefile.am  QConsoleInput.cpp  QConsoleInput.h  QShuttlePro.cpp  QShuttlePro.h  README  (+40 more)
scripts/: Makefile.dist  Makefile.dmg  version-gen.sh  version.c.gen.sh
src/: GLfrontend_old.cpp  GLfrontend_old.h  GLutil.cpp  GLutil.h  GLvideo_mt.cpp  GLvideo_mt.h  GLvideo_osd.cpp  GLvideo_osd.h  GLvideo_params.h  GLvideo_pbotex.cpp  GLvideo_pbotex.h  GLvideo_renderer.h  GLvideo_rt.cpp  GLvideo_rt.h  GLvideo_rtAdaptor.cpp  GLvideo_rtAdaptor.h  GLvideo_tradtex.cpp  GLvideo_tradtex.h  QShuttlePro.cpp  QShuttlePro.h  agl_getproc.cpp  agl_getproc.h  config.h  fileDialog.cpp  fileDialog.h  fourcc.h  frameQueue.cpp  frameQueue.h  greyFrameReader.cpp  greyFrameReader.h  main.cpp  mainwindow.cpp  mainwindow.h  osx.cpp  osx.h  playlistReader.cpp  playlistReader.h  readerInterface.h  stats.cpp  stats.h  (+14 more)
src/freetype-gl/: freetype-gl.h  texture-atlas.cpp  texture-font.c  texture-font.cpp  utf8.cpp  utf8.h  vec234.h  vector.cpp  vertex-buffer.cpp  vertex-buffer.h
